# ai-requirement-companion

./: .env.example  LICENSE  README.md  pyproject.toml
src/ai_requirement_companion/: streamlit_app.py
src/ai_requirement_companion/clients/: openrouter_client.py
src/ai_requirement_companion/core/: settings.py
src/ai_requirement_companion/models/: requirement_analysis.py
src/ai_requirement_companion/parsers/: markdown_parser.py
src/ai_requirement_companion/prompts/: requirement_analysis.py
src/ai_requirement_companion/services/: requirement_service.py
src/ai_service/: app.py  main.py
src/ai_service/api/: health.py  router.py
